# MeteoEcran

./: .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.license  .python-version.license  README.md  REUSE.toml  package.json  pdm.lock.license  pnpm-lock.yaml  pyproject.toml  requirements.txt  svelte.config.js  vite.config.ts
.github/workflows/: ci.yaml  zizmor.yaml
.reuse/: dep5
contrib/: meteoecran.nginx  meteoecran.service
meteoecran/: __about__.py  __init__.py  __main__.py  api.py  config.py  types.py  web.py
meteoecran/static/: style.css
meteoecran/templates/: base.html.jinja  index.html.jinja  partial_weather.html.jinja  weather.html.jinja
script/: all  dev  fmt  reqs  style  typing
src/: app.d.ts  app.html
src/lib/: types.ts  weather-code.ts
src/routes/: +layout.ts  +page.svelte  +page.ts
