# © 2023 Nikita Karamov <n.karamov@tu-braunschweig.de>
#
# SPDX-License-Identifier: BSD-2-Clause

[project]
name = "meteoecran"
version = "0.0.1"
description = "Current weather and forecast for digital signage"
readme = "README.md"
license = {text = "EUPL-1.2 OR AGPL-3.0-only"}
authors = [
    {name = "Nikita Karamov", email = "me@kytta.dev"},
]
requires-python = "==3.9.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
]
dynamic = [
  "version",
]
dependencies = [
  "gunicorn",
  "httpx>=0.24",
  "starlette[full]",
  "uvicorn[standard]",
]
[project.urls]
Documentation = "https://github.com/kytta/MeteoEcran#readme"
Issues = "https://github.com/kytta/MeteoEcran/issues"
Source = "https://github.com/kytta/MeteoEcran"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn --reload meteoecran:app"

types = "mypy --install-types --non-interactive {args:meteoecran}"
lint = {composite = [
    "ruff {args:.}",
    "autopep8 --diff --recursive {args:.}",
]}
fmt = {composite = [
    "autopep8 --in-place --recursive {args:.}",
    "ruff --fix {args:.}",
    "style",
]}
check = {composite = [
    "style",
    "typing",
]}
reqs = "{pdm} export --production --format requirements --output requirements.txt"

[tool.pdm.dev-dependencies]
lint = [
    "autopep8",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]

[tool.pdm.version]
source = "file"
path = "meteoecran/__about__.py"

[tool.autopep8]
ignore = ["W503"]

[tool.ruff]
target-version = "py39"
line-length = 79
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
]
ignore = [
]
unfixable = [
    # Don't just remove unused code
    "ERA",
    # Don't touch unused imports
    "F401",
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["meteoecran"]
force-single-line = true

[tool.ruff.pycodestyle]
max-doc-length = 72

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
