# © 2023 Nikita Karamov <n.karamov@tu-braunschweig.de>
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MeteoEcran"
version = "0.1.0"
description = "Current weather and forecast for digital signage"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = "EUPL-1.2 OR AGPL-3.0-only"
authors = [
    { name = "Nikita Karamov", email = "me@kytta.dev" },
]
dependencies = [
    "httpx>=0.24",
    "starlette[full]>=0.40.0",
    "uvicorn[standard]",
    "gunicorn>=22.0.0",
]

[project.urls]
Documentation = "https://github.com/kytta/MeteoEcran#readme"
Issues = "https://github.com/kytta/MeteoEcran/issues"
Source = "https://github.com/kytta/MeteoEcran"

[dependency-groups]
lint = [
    "autopep8>=2.3.1",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]

[tool.autopep8]
ignore = ["W503"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.ruff]
target-version = "py39"
line-length = 79
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
]
ignore = [
]
unfixable = [
    # Don't just remove unused code
    "ERA",
    # Don't touch unused imports
    "F401",
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["meteoecran"]
force-single-line = true

[tool.ruff.pycodestyle]
max-doc-length = 72

[tool.ruff.pydocstyle]
convention = "pep257"
